Minor bug fixes on mobile devices and replacing the big emojis with image files

--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -16,6 +16,7 @@
 .container {
   margin: 0 auto;
   padding: 4rem 1rem;
+  width: 100%;
   max-width: 1300px;
 }
 
