--- a/src/scss/base/_titles.scss
+++ b/src/scss/base/_titles.scss
@@ -8,6 +8,7 @@ h1,h2,h3,h4,h5 {
 }
 
 h2 {
+	text-align: center;
 	margin-bottom: 3rem;
 	line-height: 1.15;
   font-size: 3rem;
