--- a/src/scss/objects/_recognition.scss
+++ b/src/scss/objects/_recognition.scss
@@ -14,6 +14,7 @@
 }
 
 .recognition__ul figure {
+  min-height: 100%;
   height: 100%;
   padding: 2rem;
   border: .75rem $secondary solid;
@@ -40,13 +41,15 @@
   position: relative;
 }
 
-.recognition__ul .emoji--camera, .recognition__ul .emoji--basketball {
-  position: relative;
-  font-size: 4rem;
-  @include bp(medium) {
-    font-size: 6rem;
+.recognition__ul .recognition__img {
+  width: 50px;
+  height: 50px;
+  @include bp(small) {
+    width: 75px;
+    height: 75px;
   }
 }
+
 
 //Variations of the recognition hover effect
 @media (hover: none) {
